<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/white"
	tools:context=".LoginActivity">

	<TextView
		android:id="@+id/welcome_back"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginLeft="24dp"
		android:fontFamily="@font/montserrat_semi_bold"
		android:text="Selamat Datang Kembali!"
		android:textColor="@color/main"
		android:textSize="28dp"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		android:layout_marginTop="90dp"
		/>

	<TextView
		android:id="@+id/sign_in"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginLeft="24dp"
		android:layout_marginTop="8dp"
		android:fontFamily="@font/montserrat_light"
		android:text="Masuk untuk melanjutkan"
		android:textColor="@color/main9b"
		android:textSize="16dp"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintTop_toBottomOf="@id/welcome_back"
		/>

	<TextView
		android:id="@+id/reset_code"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginLeft="20dp"
		android:textStyle="bold"
		android:layout_marginTop="48dp"
		android:text="@string/username"
		android:textColor="@color/main31"
		android:textSize="20sp"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintTop_toBottomOf="@id/sign_in"
		/>

	<EditText
		android:id="@+id/edit_reset_code"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="24dp"
		android:layout_marginTop="8dp"
		android:layout_marginRight="24dp"
		android:hint="Silakan masukkan email"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toBottomOf="@id/reset_code"
		/>

	<TextView
		android:id="@+id/new_password"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginLeft="20dp"
		android:layout_marginTop="8dp"
		android:textStyle="bold"
		android:text="@string/password"
		android:textColor="@color/main31"
		android:textSize="20sp"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintTop_toBottomOf="@id/edit_reset_code"
		/>

	<TextView
		android:id="@+id/edit_new_password"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="24dp"
		android:layout_marginTop="8dp"
		android:layout_marginRight="24dp"
		android:hint="@string/enter_your_password"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toBottomOf="@id/new_password"
		/>

	<TextView
		android:id="@+id/forgot_password"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="8dp"
		android:layout_marginRight="24dp"
		android:textStyle="bold"
		android:text="@string/forgot_password"
		android:textColor="@color/main31"
		android:textSize="18sp"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toBottomOf="@id/edit_new_password"
		/>

	<Button
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginStart="24dp"
		android:layout_marginEnd="24dp"
		android:textSize="18dp"
		android:layout_marginBottom="200dp"
		android:background="@drawable/button_red"
		android:text="@string/log_in"
		android:textColor="@color/white"
		app:layout_constraintTop_toBottomOf="@id/forgot_password"
		android:layout_marginTop="80dp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		/>

</androidx.constraintlayout.widget.ConstraintLayout>